--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="theme-color" content="#3e00ff" /> 
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>React App</title>
 		<link
 			rel="stylesheet"
@@ -11,7 +15,6 @@
 		/>
 		<link rel="stylesheet" href="styles.css" />
 	</head>
-
 	<body>
 		<div id="root"></div>
 		<script src="../src/index.js" type="text/jsx"></script>
